--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: $
-          publish_dir: ./_site
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
